--- a/common_mobile.css
+++ b/common_mobile.css
@@ -1,4 +1,68 @@
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,a,abbr,address,big,em,img,q,small,strike,strong,sub,sup,tt,var,i,dl,dt,dd,ol,ul,li,form,fieldset,label,table,caption,tbody,thead,tfoot,tr,th,td,article,aside,canvas,details,figure,figcaption,header,footer,hgroup,menu,nav,output,section,time,mark,audio,video,input,select,button {
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+abbr,
+address,
+big,
+em,
+img,
+q,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+form,
+fieldset,
+label,
+table,
+caption,
+tbody,
+thead,
+tfoot,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figure,
+figcaption,
+header,
+footer,
+hgroup,
+menu,
+nav,
+output,
+section,
+time,
+mark,
+audio,
+video,
+input,
+select,
+button {
     margin: 0;
     padding: 0;
     border: 0;
@@ -6,11 +70,15 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,a,abbr,address,big,em,img,q
     font-size: 16px;
 }
 
+
 /*去除默认样式*/
 
-ul,ol,li {
+ul,
+ol,
+li {
     list-style: none;
 }
+
 
 /*表格边框合并，边框距零*/
 
@@ -19,11 +87,16 @@ table {
     border-spacing: 0;
 }
 
+
 /*继承父元素的字体系列样式*/
 
-input,select,textarea,button {
+input,
+select,
+textarea,
+button {
     font-family: inherit;
 }
+
 
 /*清除浮动*/
 
@@ -46,6 +119,7 @@ input,select,textarea,button {
     overflow: hidden;
 }
 
+
 /*a链接*/
 
 a {
@@ -57,9 +131,15 @@ a:hover {
     text-decoration: none;
 }
 
+
 /*去除点击高亮效果*/
 
-a,button,input,select,img,label {
+a,
+button,
+input,
+select,
+img,
+label {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: transparent;
     outline: medium none;
@@ -70,31 +150,48 @@ input::-moz-focus-inner {
     padding: 0;
 }
 
-select,input {
+select,
+input {
     vertical-align: middle;
 }
 
+
 /*去掉苹果的默认UI来渲染按钮*/
 
-input[type="submit"],input[type="reset"],input[type="button"],button,select {
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button,
+select {
     -webkit-appearance: none;
 }
 
+
 /*placeholder文本颜色*/
 
-input::-webkit-input-placeholder,textarea::-webkit-input-placeholder {
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
     color: #ccc;
 }
 
-input:-moz-placeholder,textarea:-moz-placeholder {
+input:-moz-placeholder,
+textarea:-moz-placeholder {
     color: #ccc;
 }
+
 
 /*html5标签*/
 
-header,footer,section,article,aside,nav,figure {
+header,
+footer,
+section,
+article,
+aside,
+nav,
+figure {
     display: block;
 }
+
 
 /*长英文字母 数字 换行*/
 
@@ -103,23 +200,43 @@ p {
     word-wrap: break-word;
 }
 
+
 /*去除默认样式*/
 
-h1,h2,h3,h4,h5,h6,strong,i,em,address,caption,cite,code,dfn,th,var {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong,
+i,
+em,
+address,
+caption,
+cite,
+code,
+dfn,
+th,
+var {
     font-weight: normal;
     font-style: normal;
 }
 
-fieldset,img {
+fieldset,
+img {
     border: none;
     display: block;
 }
 
+
 /*去除长按a链接弹框*/
 
-html,body {
+html,
+body {
     -webkit-touch-callout: none;
 }
+
 
 /* 设置为100是方便用rem单位计算 */
 
